crates/rome_formatter/tests/specs/prettier/decorators/parens.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: parens.js

---
# Input
```js
class X {
  @(computed().volatile())
  x
}

```

# Output
```js
class X {
  @(computed().volatile())
  x
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ parens.js:2:3
  │
2 │   @(computed().volatile())
  │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '.'
  ┌─ parens.js:2:15
  │
2 │   @(computed().volatile())
  │               ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found ')'
  ┌─ parens.js:2:26
  │
2 │   @(computed().volatile())
  │                          ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here


```


